Added client for new ValuationController
